--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ repositories {
 task fatJar(type: Jar) {
     manifest {
         attributes 'Implementation-Title': 'Gradle Jar File Example',
-                'Main-Class': 'com.example.ThirdLabWork.Main'
+                'Main-Class': 'com.example.fourthlab.Main'
     }
     from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
     with jar
